--- a/Ch7_Projects/index.html
+++ b/Ch7_Projects/index.html
@@ -19,6 +19,10 @@
         <div class="projects">
             <a class="project-link" style="" href="./1-colorChanger/index.html">Project 1 - Color Changer 🔥 </a>
         </div>
+
+        <div class="projects">
+            <a class="project-link" style="" href="./2-BMICalculator/index.html">Project 2 - BMI Calculator 🤓 </a>
+        </div>
     </main>
 </body>
 </html>
