--- a/Ch7_Projects/index.html
+++ b/Ch7_Projects/index.html
@@ -23,6 +23,10 @@
         <div class="projects">
             <a class="project-link" style="" href="./2-BMICalculator/index.html">Project 2 - BMI Calculator 🤓 </a>
         </div>
+
+        <div class="projects">
+            <a class="project-link" style="" href="./3-DigitalClock/index.html">Project 3 - Digital Clock ⏰</a>
+        </div>
     </main>
 </body>
 </html>
