--- a/Ch7_Projects/index.html
+++ b/Ch7_Projects/index.html
@@ -27,6 +27,10 @@
         <div class="projects">
             <a class="project-link" style="" href="./3-DigitalClock/index.html">Project 3 - Digital Clock ⏰</a>
         </div>
+        <div class="projects">
+            <a class="project-link" style="" href="./4-GuessTheNumber/index.html">Project 4 - Guess The Number 😎</a>
+        </div>
+
     </main>
 </body>
 </html>
