--- a/Ch7_Projects/index.html
+++ b/Ch7_Projects/index.html
@@ -31,6 +31,11 @@
             <a class="project-link" style="" href="./4-GuessTheNumber/index.html">Project 4 - Guess The Number 😎</a>
         </div>
 
+        <div class="projects">
+            <a class="project-link" style="" href="./5-UnlimitedColor/index.html">Project 5 - Unlimited Colors 💢</a>
+        </div>
+
+
     </main>
 </body>
 </html>
