--- a/Ch9_Advance_o/apiRequest.html
+++ b/Ch9_Advance_o/apiRequest.html
@@ -15,7 +15,7 @@
    </p> 
 </body>
 <script>
-    const requestUrl = 'https://api.github.com/users/hiteshchoudhary'
+    const requestUrl = 'https://api.github.com/users/mankal-27'
     const xhr = new XMLHttpRequest();
     xhr.open('GET', requestUrl)
     xhr.onreadystatechange = function(){
